@@ -1,51 +1,73 @@
+import org.jlleitschuh.gradle.ktlint.reporter.ReporterType
+import org.jlleitschuh.gradle.ktlint.tasks.GenerateReportsTask
+
 plugins {
-	kotlin("jvm") version "2.2.21"
-	kotlin("plugin.spring") version "2.2.21"
-	id("io.spring.dependency-management") version "1.1.7"
-	id("org.springframework.boot") version "4.0.0" apply false
+    kotlin("jvm") version "2.2.21"
+    kotlin("plugin.spring") version "2.2.21"
+    id("io.spring.dependency-management") version "1.1.7"
+    id("org.springframework.boot") version "4.0.0" apply false
+    id("org.jlleitschuh.gradle.ktlint").version("14.0.1")
 }
 
 allprojects {
-	group = "com"
-	version = "0.0.1-SNAPSHOT"
-	description = "moyoy"
+    group = "com"
+    version = "0.0.1-SNAPSHOT"
+    description = "moyoy"
 
-	repositories {
-		mavenCentral()
-	}
+    repositories {
+        mavenCentral()
+    }
+
+    tasks.withType<JavaExec> {
+        jvmArgs("--add-opens", "java.base/sun.misc=ALL-UNNAMED")
+    }
+
+    apply(plugin = "org.jlleitschuh.gradle.ktlint")
+
+    ktlint {
+        reporters {
+            reporter(ReporterType.JSON)
+        }
+    }
+
+    tasks.withType<GenerateReportsTask> {
+        reportsOutputDirectory.set(
+            rootProject.layout.buildDirectory.dir("reports/ktlint/${project.name}")
+        )
+    }
 }
 
 subprojects {
-	apply(plugin = "org.jetbrains.kotlin.jvm")
-	apply(plugin = "org.jetbrains.kotlin.plugin.spring")
-	apply(plugin = "io.spring.dependency-management")
-	apply(plugin = "org.springframework.boot")
+    apply(plugin = "org.jetbrains.kotlin.jvm")
+    apply(plugin = "org.jetbrains.kotlin.plugin.spring")
+    apply(plugin = "io.spring.dependency-management")
+    apply(plugin = "org.springframework.boot")
 
-	dependencies {
-		implementation("org.jetbrains.kotlin:kotlin-reflect")
-		implementation("tools.jackson.module:jackson-module-kotlin")
-		implementation("org.springframework.boot:spring-boot-starter-web")
+    dependencies {
+        implementation("org.jetbrains.kotlin:kotlin-reflect")
+        implementation("tools.jackson.module:jackson-module-kotlin")
+        implementation("org.springframework.boot:spring-boot-starter-web")
 
-		testImplementation("org.springframework.boot:spring-boot-starter-test")
-		testImplementation("org.jetbrains.kotlin:kotlin-test-junit5")
-		testRuntimeOnly("org.junit.platform:junit-platform-launcher")
-	}
+        testImplementation("org.springframework.boot:spring-boot-starter-test")
+        testImplementation("org.jetbrains.kotlin:kotlin-test-junit5")
+        testRuntimeOnly("org.junit.platform:junit-platform-launcher")
+    }
 
-	java {
-		toolchain {
-			languageVersion = JavaLanguageVersion.of(24)
-		}
-	}
+    java {
+        toolchain {
+            languageVersion = JavaLanguageVersion.of(24)
+        }
+    }
 
-	tasks.withType<Test> {
-		useJUnitPlatform()
-	}
+    tasks.withType<Test> {
+        useJUnitPlatform()
+    }
 
-	tasks.getByName("bootJar") {
-		enabled = false
-	}
+    tasks.getByName("bootJar") {
+        enabled = false
+    }
 
-	tasks.getByName("jar") {
-		enabled = false
-	}
+    tasks.getByName("jar") {
+        enabled = false
+    }
 }
